fix: fix message wrap

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -84,7 +84,7 @@ h1{
     font-weight: 400;
 }
 
-p{
+.chatTitle{
     color: #CEE8FF;
     font-size: 20px;
 
